--- a/assets/sass/_variaveis.scss
+++ b/assets/sass/_variaveis.scss
@@ -20,11 +20,12 @@ $cor-cinza-claro: #A9A9A9;
 $cor-destaque-claro: #C21010;
 $cor-destaque-escuro: #A0DC41;
 
-$cor-categoria-conteudo: #76D7C4;
-$cor-categoria-fullstack: #A569BD;
-$cor-categoria-dotnet: #2980B9;
-$cor-categoria-csharp: #5D6D7E;
 $cor-categoria-angular: #E74C3C;
+$cor-categoria-conteudo: #76D7C4;
+$cor-categoria-csharp: #5D6D7E;
+$cor-categoria-dotnet: #2980B9;
+$cor-categoria-fullstack: #A569BD;
+$cor-categoria-python: #2ECC71;
 $cor-categoria-unity: #E67E22;
 
 
