--- a/assets/sass/_pagina-inicio.scss
+++ b/assets/sass/_pagina-inicio.scss
@@ -7,10 +7,10 @@ body#pagina-inicio{
     
     h2{
       margin: 5px;
-      font-family: 'Covered By Your Grace', cursive;
-      font-size: 4em;
-      font-weight: bold;
-      text-transform: uppercase;
+      font-family: 'Comfortaa', cursive;
+      font-size: 3.1em;
+      font-weight: 700;
+      letter-spacing: -3px;
       color: var(--cor-destaque);
     }
 
