--- a/assets/sass/_variaveis.scss
+++ b/assets/sass/_variaveis.scss
@@ -17,8 +17,8 @@ $cor-total-branco: #FFFFFF;
 $cor-cinza-escuro: #6C757D;
 $cor-cinza-claro: #A9A9A9;
 
-$cor-destaque-claro: #C21010;
-$cor-destaque-escuro: #A0DC41;
+$cor-destaque-claro: #1D4E89;
+$cor-destaque-escuro: #F79256;
 
 $cor-categoria-angular: #E74C3C;
 $cor-categoria-conteudo: #76D7C4;
