--- a/assets/sass/_componentes.scss
+++ b/assets/sass/_componentes.scss
@@ -24,12 +24,6 @@
 
       .decoracao{
         background: var(--cor-destaque);
-        
-          --mask:
-            radial-gradient(7.21px at 50% calc(100% + 2.75px),#0000 calc(99% - 3px),#000 calc(101% - 3px) 99%,#0000 101%) calc(50% - 10px) calc(50% - 4px + .5px)/20px 8px repeat-x,
-            radial-gradient(7.21px at 50% -2.75px,#0000 calc(99% - 3px),#000 calc(101% - 3px) 99%,#0000 101%) 50% calc(50% + 4px)/20px 8px repeat-x;
-            -webkit-mask: var(--mask);
-                    mask: var(--mask);
 
         &.decoracao-animada{
           opacity: 0.5;
@@ -42,17 +36,23 @@
       }
 
       div.decoracao{
-        height: 100%;
+        height: 7px;
         width: 100%;
-        top: 0;
+        bottom: -6px;
         left: 0;
         position: absolute;
 
-        &:hover{ background-position: left bottom; }
+        &:hover{ background-position: left top; }
+      }
+
+      &:hover{
+        div.decoracao {background-position: left top; }
       }
     }
 
     &.active{ color: var(--cor-media-texto); }
+
+    .tema{ width: 35px; }
   }
 
   .navbar-toggler,
@@ -115,7 +115,11 @@
           }
         }
 
-        div.decoracao:hover{ background-position: left bottom; }
+        div.decoracao:hover{ background-position: left top; }
+        
+        &:hover{
+          div.decoracao {background-position: left top; }
+        }
       }
     }
   }
