--- a/assets/sass/_componentes.scss
+++ b/assets/sass/_componentes.scss
@@ -140,6 +140,8 @@
 
     border-bottom: none; 
   }
+
+  .fundo-navegacao{ height: auto; }
 }
 
 // Navegação: Sobrescrever Bootstrap =======================
