--- a/assets/sass/_variaveis.scss
+++ b/assets/sass/_variaveis.scss
@@ -17,16 +17,14 @@ $cor-total-branco: #FFFFFF;
 $cor-cinza-escuro: #6C757D;
 $cor-cinza-claro: #A9A9A9;
 
-$cor-destaque-claro: #1D4E89;
-$cor-destaque-escuro: #F79256;
+$cor-destaque-claro: #1BCF54;
+$cor-destaque-escuro: #0297F1;
 
 $cor-categoria-angular: #E74C3C;
 $cor-categoria-conteudo: #76D7C4;
 $cor-categoria-csharp: #5D6D7E;
 $cor-categoria-dotnet: #2980B9;
 $cor-categoria-fullstack: #A569BD;
-$cor-categoria-python: #2ECC71;
-$cor-categoria-unity: #E67E22;
 
 
 // Váriaveis: CSS ===============================
