--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -14,8 +14,8 @@
   --cor-invertido-texto: #F8F9FA;
   --cor-invertido-fundo: #212529;
   --cor-detalhe-rgb: 108, 117, 125;
-  --cor-destaque: #1D4E89;
-  --cor-destaque-invertido: #F79256; }
+  --cor-destaque: #1BCF54;
+  --cor-destaque-invertido: #0297F1; }
 
 .tema-escuro:root {
   --cor-base-texto: #F8F9FA;
@@ -25,8 +25,8 @@
   --cor-invertido-texto: #212529;
   --cor-invertido-fundo: #F8F9FA;
   --cor-detalhe-rgb: 169, 169, 169;
-  --cor-destaque: #F79256;
-  --cor-destaque-invertido: #1D4E89; }
+  --cor-destaque: #0297F1;
+  --cor-destaque-invertido: #1BCF54; }
 
 /* GERAL ======================================== */
 html, body {
@@ -268,8 +268,11 @@ body#pagina-sobre .navbar .navbar-toggler, body#pagina-sobre .navbar .navbar-tog
 body#pagina-sobre .img-perfil {
   border: 7px solid var(--cor-destaque); }
 body#pagina-sobre #secao-biografia h2 {
+  font-family: 'Comfortaa', cursive;
+  font-weight: 700;
+  letter-spacing: -1px;
   margin: 15px 0px;
-  font-size: 2em;
+  font-size: 2.5em;
   font-weight: bold;
   text-transform: uppercase;
   color: var(--cor-base-texto); }
@@ -331,10 +334,6 @@ body#pagina-portfolio .portfolio-artigo .portfolio-categoria {
     color: #2980B9; }
   body#pagina-portfolio .portfolio-artigo .portfolio-categoria.categoria-fullstack {
     color: #A569BD; }
-  body#pagina-portfolio .portfolio-artigo .portfolio-categoria.categoria-python {
-    color: #2ECC71; }
-  body#pagina-portfolio .portfolio-artigo .portfolio-categoria.categoria-unity {
-    color: #E67E22; }
 body#pagina-portfolio .portfolio-artigo .portfolio-titulo {
   margin-bottom: 15px;
   font-size: 1.5em;
@@ -370,19 +369,19 @@ body#pagina-curriculo #secao-curriculo .cartao-apresentacao {
   border-radius: 7px 7px 0px 0px;
   background-color: var(--cor-fundo-destaque); }
   body#pagina-curriculo #secao-curriculo .cartao-apresentacao h2 {
+    font-family: 'Comfortaa', cursive;
+    font-weight: 700;
+    letter-spacing: -1px;
     font-size: 2em;
     font-weight: bold;
     color: var(--cor-base-texto); }
   body#pagina-curriculo #secao-curriculo .cartao-apresentacao h3 {
-    font-family: 'Covered By Your Grace', cursive;
-    font-size: 1.75em;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: var(--cor-destaque); }
+    font-size: 1.5em;
+    color: var(--cor-media-texto); }
   body#pagina-curriculo #secao-curriculo .cartao-apresentacao .social {
     margin-top: 10px; }
     body#pagina-curriculo #secao-curriculo .cartao-apresentacao .social img {
-      width: 45px;
+      width: 40px;
       height: auto;
       margin: 0 5px; }
 body#pagina-curriculo #secao-curriculo .cartao-baixar {
@@ -415,6 +414,9 @@ body#pagina-curriculo #secao-curriculo .informacao {
     list-style-type: none; }
     body#pagina-curriculo #secao-curriculo .informacao ul strong {
       font-weight: bold; }
+  body#pagina-curriculo #secao-curriculo .informacao tr {
+    color: var(--cor-base-texto);
+    border-color: var(--cor-destaque); }
   body#pagina-curriculo #secao-curriculo .informacao .glyphicon {
     color: var(--cor-destaque); }
   body#pagina-curriculo #secao-curriculo .informacao .collapse-date {
