--- a/assets/sass/_pagina-sobre.scss
+++ b/assets/sass/_pagina-sobre.scss
@@ -12,8 +12,11 @@ body#pagina-sobre{
   // Sobre: Biografia ===========================
   #secao-biografia{
     h2{
+      font-family: 'Comfortaa', cursive;
+      font-weight: 700;
+      letter-spacing: -1px;
       margin: 15px 0px;
-      font-size: 2em;
+      font-size: 2.5em;
       font-weight: bold;
       text-transform: uppercase;
       color: var(--cor-base-texto);
